--- a/css/common.css
+++ b/css/common.css
@@ -652,3 +652,11 @@ body {
     background-repeat: no-repeat;
     background-position: center center;
 }
+
+
+
+/* 팝업 슬라이드 공통 */
+.slide-box{position: fixed;    border: 1px solid black;    width: 100%;    height: 300px;    bottom: 0;    background: gray;}
+
+
+
