--- a/css/common.css
+++ b/css/common.css
@@ -656,7 +656,7 @@ body {
 
 
 /* 팝업 슬라이드 공통 */
-#slide-box{position: fixed;    border: 1px solid black;    width: 100%;    height: 300px;    bottom: 0;    background: gray;}
-#slide-content {position: absolute;    bottom: 0;    width: 100%;    min-height: 300px;    height: 100%;}
-#slide-area.on_slide {display: block; position: relative; top: 0; width: 100%;height: 100%; transition: cubic-bezier(.75,0,.24,.99);}
+.slide_box{position: fixed;    border: 1px solid black;    width: 100%;    height: 300px;    bottom: 0;    background: gray;}
+.slide_content {position: absolute;    bottom: 0;    width: 100%;    min-height: 300px;    height: 100%;}
+.slide_area.on_slide {display: block; position: relative; top: 0; width: 100%;height: 100%; transition: cubic-bezier(.75,0,.24,.99);}
 
