--- a/html/include/_header.html
+++ b/html/include/_header.html
@@ -2,9 +2,9 @@
 <header id="header">
     <ul class="skipnav">
         <li>
-            <a href="#content">컨텐츠 바로가기</a>
+            <a href="#content">컨텐츠 바11로가기</a>
         </li>
     </ul>
-    <div class="header-content">header</div>
+    <div class="header-content">heade11r</div>
 </header>
 <!-- e: header include-->
