--- a/html/include/_head.html
+++ b/html/include/_head.html
@@ -11,5 +11,4 @@
 <link rel="shortcut icon" type="image/x-icon" href="/favicon.ico" />
 <link href="../../css/common.css" type="text/css" rel="stylesheet" />
 <script src="../../js/jquery.js"></script>
-<script src="../../js/slide.js"></script>
-<script src="../../js/swiper.js"></script>
+<script src="../../js/slide.js" defer></script>
