--- a/css/codinglist.css
+++ b/css/codinglist.css
@@ -654,6 +654,64 @@ body {
     background-position: center center;
 }
 
+/* 메인페이지 모바일 화면 */
+.top-cont {
+    position: relative;
+    width: 100%;
+}
+
+.section {
+    position: relative;
+    width: 100%;
+    height: 100%;
+    min-height: 100px;
+    padding: 1rem;
+}
+
+.mid-cont {
+    position: relative;
+    width: 100%;
+}
+
+.bot-cont {
+    position: relative;
+    width: 100%;
+}
+
+/* 팝업 슬라이드 공통 */
+.slide_box {
+    position: fixed;
+    width: 100%;
+    height: 300px;
+    bottom: 0;
+}
+
+.slide_content {
+    position: absolute;
+    bottom: 0;
+    width: 100%;
+    min-height: 300px;
+    height: 100%;
+}
+
+.slide_box .slide_area {
+    display: block;
+    position: relative;
+    margin-top: 100vh;
+    top: 0;
+    width: 100%;
+    height: 100%;
+    -webkit-transition: margin-top 0.5s cubic-bezier(0.75, 0, 0.24, 0.99);
+    -o-transition: margin-top 0.5s cubic-bezier(0.75, 0, 0.24, 0.99);
+    transition: margin-top 0.5s cubic-bezier(0.75, 0, 0.24, 0.99);
+    background-color: blue;
+}
+
+.slide_area.on_slide {
+    margin-top: 0;
+    opacity: 1;
+}
+
 /*! https://cdn.datatables.net/1.12.1/css/jquery.dataTables.min.css */
 table.dataTable td.dt-control {
     text-align: center;
