코딩애플 스크립트 3강 까지 따라해보기

--- a/css/common.css
+++ b/css/common.css
@@ -744,3 +744,10 @@ body {
     -o-object-fit: cover;
     object-fit: cover;
 }
+
+.alert-box {
+    display: none;
+    padding: 10px;
+    border-radius: 10px;
+    background-color: #6262c2;
+}
