color_flipper 추가

--- a/html/include/_header.html
+++ b/html/include/_header.html
@@ -5,6 +5,6 @@
             <a href="#content">컨텐츠 바11로가기</a>
         </li>
     </ul>
-    <div class="header-content">heade11r</div>
+    <div class="header-content"></div>
 </header>
 <!-- e: header include-->
