--- a/css/common.css
+++ b/css/common.css
@@ -751,3 +751,58 @@ body {
     border-radius: 10px;
     background-color: #6262c2;
 }
+
+.main_area {
+    position: relative;
+    width: 100%;
+    height: 100%;
+}
+
+.main_area .change_box {
+    position: relative;
+    display: -webkit-box;
+    display: -webkit-flex;
+    display: -ms-flexbox;
+    display: flex;
+    width: 100%;
+    height: 50%;
+    background-color: rgba(17, 17, 17, 0.0666666667);
+    -webkit-box-align: center;
+    -webkit-align-items: center;
+    -ms-flex-align: center;
+    align-items: center;
+    text-align: center;
+    -webkit-box-pack: center;
+    -webkit-justify-content: center;
+    -ms-flex-pack: center;
+    justify-content: center;
+    -webkit-flex-wrap: wrap;
+    -ms-flex-wrap: wrap;
+    flex-wrap: wrap;
+    -webkit-box-orient: vertical;
+    -webkit-box-direction: normal;
+    -webkit-flex-direction: column;
+    -ms-flex-direction: column;
+    flex-direction: column;
+}
+
+.main_area .change_box .txt_code {
+    padding: 20px;
+    border-radius: 15px;
+    background-color: #333333;
+    font-size: 30px;
+    color: #ffffff;
+}
+
+.main_area .change_box .txt_code span {
+    color: rgb(142, 142, 231);
+}
+
+.button_area {
+    position: absolute;
+    padding: 15px 30px;
+    background-color: rgba(136, 68, 119, 0.3333333333);
+    border-radius: 5px;
+    border: 1px solid blue;
+    bottom: 20%;
+}
