--- a/html/include/_head.html
+++ b/html/include/_head.html
@@ -12,3 +12,4 @@
 <link href="../../css/common.css" type="text/css" rel="stylesheet" />
 
 <script src="../../js/jquery.js"></script>
+<script src="../../js/quest.js"></script>
